--- a/_config.yml
+++ b/_config.yml
@@ -18,12 +18,12 @@ avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/je
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email:
+  email: maryamalayaat@gmail.com
   facebook:
   flickr:
-  github: barryclark/jekyll-now
-  instagram:
-  linkedin:
+  github: MaryamJamal89
+  instagram: maryam_alayaat
+  linkedin: maryam-el-aiat
   pinterest:
   rss: # just type anything here for a working RSS icon
   twitter: MemaBlue
